# poc-self-improved-project

./: README.md  agent.py  pyproject.toml
.github/workflows/: agent.yml  blank.yml
proposed_build/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
proposed_build/src/: config.py  main.py
proposed_build/src/etl/: extract.py  load.py  transform.py
